--- a/LaTeX-Reports/A2/refs.bib
+++ b/LaTeX-Reports/A2/refs.bib
@@ -86,14 +86,14 @@
   title = {NVIDIA Turing GPU Architecture},
   author = {NVIDIA Corporation},
   year = {2018},
-  url = {https://www.nvidia.com/content/dam/en-zz/Solutions/design-visualization/technologies/turing-architecture/NVIDIA-Turing-Architecture-Whitepaper.pdf},
+  howpublished = {\url{https://www.nvidia.com/content/dam/en-zz/Solutions/design-visualization/technologies/turing-architecture/NVIDIA-Turing-Architecture-Whitepaper.pdf}},
   institution = {NVIDIA Corporation}
 }
 
 @misc{pyvideocore6, 
 	title = {py-videocore6: A Python library for GPGPU programming on Raspberry Pi 4}, 
-	author = {nineties}, year = {2021}, 
-	howpublished = {\url{https://github.com/nineties/py-videocore6}}, 
+	author = {Idein}, year = {2021}, 
+	howpublished = {\url{https://github.com/Idein/py-videocore6}}, 
 	note = {Accessed: 2024-01-30} 
 }
 
@@ -109,7 +109,7 @@
 	title = {QPULib: A Programming Language and Compiler for the Raspberry Pi’s Quad Processing Units}, 
 	author = {Matthew Naylor}, 
 	year = {2021}, 
-	url = {https://github.com/mn416/QPULib}, 
+	howpublished = {\url{https://github.com/mn416/QPULib}}, 
 	note = {Accessed: 2024-01-30} 
 }
 
@@ -120,13 +120,13 @@
 	year = {2013}, 
 	type = {Technical Report}, 
 	number = {VideoCoreIV-AG100-R}, 
-	url = {https://docs.broadcom.com/doc/12358545} 
+	howpublished = {\url{https://docs.broadcom.com/doc/12358545}}
 }
 
 @misc{torvalds_linux_2024,
   author = {Torvalds, Linus},
   title = {linux/drivers/gpu/drm/v3d},
-  url = {https://github.com/torvalds/linux/tree/master/drivers/gpu/drm/v3d},
+  howpublished = {\url{https://github.com/torvalds/linux/tree/master/drivers/gpu/drm/v3d}},
   year = {2024},
   note = {Accessed: 2024-01-30}
 }
@@ -135,14 +135,14 @@
   title = {external-mesa/src/gallium/drivers/v3d at master · intel/external-mesa},
   author = {intel},
   year = {2024},
-  url = {https://github.com/intel/external-mesa/tree/master/src/gallium/drivers/v3d},
+  howpublished = {\url{https://github.com/intel/external-mesa/tree/master/src/gallium/drivers/v3d}},
   note = {Accessed: 2024-01-30}
 }
 
 @misc{linux_kernel_2024,
   title = {The Linux Kernel 6.7.0},
   author = {The kernel development community},
-  url = {https://www.kernel.org/doc/html/latest/gpu/v3d.html},
+  howpublished = {\url{https://www.kernel.org/doc/html/latest/gpu/v3d.html}},
   year = {2024},
   note = {Accessed: 2024-02-02}
 }
@@ -169,7 +169,7 @@
 	title = {BCM2711 ARM Peripherals}, 
 	author = {Broadcom Europe Ltd. and Raspberry Pi Ltd.}, 
 	year = {2022}, 
-	url = {https://datasheets.raspberrypi.com/bcm2711/bcm2711-peripherals.pdf}, 
+	howpublished = {\url{https://datasheets.raspberrypi.com/bcm2711/bcm2711-peripherals.pdf}}, 
 	note = {Accessed: 2024-02-06} 
 }
 
@@ -178,7 +178,7 @@
 	title = {ARM Cortex-A72 MPCore Processor Technical Reference Manual}, 
 	institution = {ARM Limited}, 
 	year = {2021}, 
-	url = {https://developer.arm.com/documentation/100095/0003/} 
+	howpublished = {\url{https://developer.arm.com/documentation/100095/0003/}}
 }
 
 @misc{raspberrypi2024,
@@ -186,7 +186,63 @@
   author = {Raspberry Pi},
   year = {2024},
   url = {https://www.raspberrypi.org/documentation/hardware/raspberrypi/processors/README.md},
+  howpublished = {\url{https://www.raspberrypi.org/documentation/hardware/raspberrypi/processors/README.md}},
   note = {Accessed: 2024-02-07}
 }
 
+@misc{mesa3d,
+  title = {Mesa 3D Documentation},
+  author = {Mesa Developers},
+  url = {https://docs.mesa3d.org/drivers/v3d.html},
+  howpublished = {\url{https://docs.mesa3d.org/drivers/v3d.html}},
+  note = {Accessed: 2024-02-07}
+}
 
+@misc{uVkCompute,
+  title = {µVkCompute: A micro Vulkan compute pipeline and a collection of benchmarking compute shaders},
+  author = {Google},
+  year = {2024},
+  howpublished = {\url{https://github.com/google/uVkCompute}},
+  note = {Accessed: 2024-02-07}
+}
+
+@misc{q-engineering,
+  title = {Install Vulkan on a Raspberry Pi 4},
+  author = {Q-engineering},
+  year = {2023},
+  howpublished = {\url{https://qengineering.eu/install-vulkan-on-raspberry-pi-4.html}},
+  note = {Accessed: 2024-02-07}
+}
+
+@misc{willems2024,
+  author = {Willems, Sascha},
+  title = {Vulkan Examples and Demos},
+  year = {2024},
+  howpublished = {\url{https://github.com/SaschaWillems/Vulkan}},
+  note = {Accessed: 2024-02-07}
+}
+
+@misc{rppal,
+  title = {RPPAL: A Rust library for Raspberry Pi peripherals},
+  author = {G. van de Velde},
+  year = {2021},
+  howpublished = {\url{https://docs.rs/rppal/0.12.0/rppal/}},
+  note = {Accessed: 2024-02-08}
+}
+
+@article{Zwetsloot2024,
+  title = {Raspberry Pi 4 specs and benchmarks},
+  author = {Zwetsloot, Rob},
+  journal = {The MagPi},
+  howpublished = {\url{https://magpi.raspberrypi.org/articles/raspberry-pi-4-specs-benchmarks}},
+  year = {2024}
+}
+
+@misc{jetsonstore,
+  author = {NVIDIA Corporation},
+  title = {Jetson Store},
+  publisher = {NVIDIA Corporation},
+  year = {2024},
+  url = {https://developer.nvidia.com/embedded/jetson-developer-kits},
+  howpublished = {\url{https://developer.nvidia.com/embedded/jetson-developer-kits}}
+}
